Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     font-family: 'Plus Jakarta Sans';
 }
 
+html{
+    max-width: 100vw;
+}
+
 nav {
     height: 100px;
     display: flex;
@@ -125,10 +129,6 @@ nav ul li a{
     margin-top: 3rem;
 }
 @media (width<768px) {
-
-    body{
-        max-width: 100vw;
-    }
     nav {
         display: flex;
         align-items: center;
